arreglo del login y rutas de auth
cambie las rutas de /api/v1/autenticacion a /api/v1/auth porque tenia problemas con el frontend y no me funcionaba el login

tambien arregle el formato de respuesta que devolvia el backend, ahora devuelve bien el RespuestaAPI con los datos del usuario

agregue compatibilidad para que acepte username, email o nombreUsuario en el login

mejore el CORS y los filtros de seguridad, ahora los logs son mas claros

cree una guia rapida para no olvidar como iniciar el proyecto jeje