@@ -23,7 +23,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -40,37 +39,73 @@ public class ConfiguracionSeguridad {
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .authorizeHttpRequests(auth -> auth
-                        // Endpoints públicos (sin autenticación)
+                        // ===== ENDPOINTS PÚBLICOS (SIN AUTENTICACIÓN) =====
                         .requestMatchers(
+                                // Autenticación y registro (estándar REST)
+                                "/api/v1/auth/**",
+                                "/api/auth/**",  // Soporte para frontends sin versión
+                                
+                                // Alias por compatibilidad (deprecar eventualmente)
                                 "/api/autenticacion/**",
                                 "/api/v1/autenticacion/**",
-                                "/api/v1/raspberry/**",  // API para Raspberry Pi
+                                
+                                // Raspberry Pi
+                                "/api/v1/raspberry/**",
+                                
+                                // Mantenimiento público
                                 "/api/mantenimiento/estado",
+                                
+                                // Documentación
                                 "/swagger-ui/**",
+                                "/swagger-ui.html",
+                                "/v3/api-docs/**",
                                 "/api-docs/**",
-                                "/actuator/health",
+                                
+                                // Actuator y salud
+                                "/actuator/**",
+                                "/actuator/health/**",
+                                
+                                // H2 Console (solo desarrollo)
                                 "/h2-console/**",
-                                "/uploads/**",  // Archivos subidos
-                                "/error"
+                                
+                                // Archivos estáticos
+                                "/uploads/**",
+                                "/static/**",
+                                
+                                // Error handling
+                                "/error",
+                                "/favicon.ico"
                         ).permitAll()
 
-                        // Endpoints solo para administradores
-                        .requestMatchers("/api/admin/**", "/api/mantenimiento/activar", "/api/mantenimiento/desactivar")
-                        .hasRole("ADMINISTRADOR")
+                        // ===== ENDPOINTS ADMINISTRATIVOS =====
+                        .requestMatchers(
+                                "/api/admin/**", 
+                                "/api/v1/admin/**",
+                                "/api/mantenimiento/activar", 
+                                "/api/mantenimiento/desactivar"
+                        ).hasRole("ADMINISTRADOR")
 
-                        // Endpoints para técnicos y desarrolladores
-                        .requestMatchers("/api/tecnico/**")
+                        // ===== ENDPOINTS TÉCNICOS =====
+                        .requestMatchers("/api/tecnico/**", "/api/v1/tecnico/**")
                         .hasAnyRole("ADMINISTRADOR", "TECNICO", "DESARROLLADOR")
 
-                        // Endpoints de pantallas y contenidos (usuarios autenticados)
-                        .requestMatchers("/api/v1/pantallas/**", "/api/v1/contenidos/**")
-                        .authenticated()
+                        // ===== ENDPOINTS AUTENTICADOS =====
+                        .requestMatchers(
+                                "/api/v1/pantallas/**", 
+                                "/api/v1/contenidos/**",
+                                "/api/v1/campaigns/**",
+                                "/api/v1/stats/**"
+                        ).authenticated()
 
                         // Resto de endpoints requieren autenticación
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(session -> session
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+                // Deshabilitar headers de seguridad para H2 Console (solo desarrollo)
+                .headers(headers -> headers
+                        .frameOptions(frame -> frame.sameOrigin())
                 )
                 .authenticationProvider(authenticationProvider())
                 .addFilterBefore(filtroJwt, UsernamePasswordAuthenticationFilter.class);
@@ -80,8 +115,9 @@ public class ConfiguracionSeguridad {
     
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider(passwordEncoder());
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService);
+        authProvider.setPasswordEncoder(passwordEncoder());
         return authProvider;
     }
     
@@ -98,6 +134,7 @@ public class ConfiguracionSeguridad {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
+        
         // Permitir cualquier puerto localhost en desarrollo
         configuration.setAllowedOriginPatterns(Arrays.asList(
                 "http://localhost:*",
@@ -105,9 +142,32 @@ public class ConfiguracionSeguridad {
                 "https://innoad.com",
                 "https://www.innoad.com"
         ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Métodos HTTP permitidos
+        configuration.setAllowedMethods(Arrays.asList(
+                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"
+        ));
+        
+        // Headers permitidos
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "X-Requested-With",
+                "Cache-Control",
+                "Origin"
+        ));
+        
+        // Headers expuestos al cliente
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Disposition"
+        ));
+        
+        // Permitir credenciales (cookies, authorization headers)
         configuration.setAllowCredentials(true);
+        
+        // Cache de configuración CORS (1 hora)
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
